# WebMonitoring

backend/: .gitignore  README.md  monitoring_profile.json  pyproject.toml  server.py
backend/app/: __init__.py  config.py  logging_config.py  main.py  models.py
backend/app/providers/: monitoring_profile_provider.py
backend/app/services/: alert_service.py  rules_engine.py
extension/: README.md  background.js  manifest.json  popup.html
